# SINDy-PX4

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  SID_control  SID_control.cpp  Toolchain-aarch64-linux-gnu.cmake  Vagrantfile  autopilot_interface.cpp  autopilot_interface.h  config.toml  log.csv  makefile  run-sid.sh  udp_poc.cpp  udp_poc.h
common/: generic_port.h  udp_port.h
src/: CMakeLists.txt  SID.cpp  SID.h  SID_control.cpp  SID_control.h  autopilot_interface.cpp  autopilot_interface.h  buffer.cpp  buffer.h  generic_port.h  interpolate.cpp  interpolate.h  logger.cpp  logger.h  logging.cpp  logging.h  lsmr.cpp  lsmr.h  mavlink_string_formatting.cpp  mavlink_string_formatting.h  regression.cpp  regression.h  serial_port.cpp  serial_port.h  sid_control.cpp  sid_control.h  sindy.cpp  sindy.h  system_identification.cpp  system_identification.h  udp_port.cpp  udp_port.h
test/: CMakeLists.txt  run-test.sh  stefan@px4-sid-hil  tests.cpp
tests/: CMakeLists.txt  launch.json  log.txt  makefile  unit_tests  unit_tests.cpp
tools/: provision_vm.sh  run-sid.sh
